@@ -1,3 +1,10 @@
+2010-07-05  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/guality/nrv-1.c: New test.
+
+	PR c++/44808
+	* g++.dg/opt/nrv16.C: New test.
+
 2010-07-02  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/44780
